--- a/StyleSheet1.css
+++ b/StyleSheet1.css
@@ -1,22 +1,21 @@
-﻿section 
-{
-    background-color: blue;
-    color: darkkhaki;
-    font-size: 50px;
-    text-align: center;
-    font-family: 'Times New Roman', Times, serif;
-}
-   
+﻿
+
 body {
-    background-image: url(fondo.JPG);
+    background-image: url(perro.jpg)
 }
+
 h1 {
-    border: 3px solid blue;
-    
-}
-div {
+    border: 5px solid purple;
+    color: coral;
     text-align: center;
-    color: black;
-    font-size: 50px; 
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+section {
+    color: darkorchid;
+    font-size: 30px;
+}
+
+div {
+    border: 5px solid purple;
 }
